# knowhow

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  tsumiaegekun.devin.md
.claude/: launch.json
.devin/: rules
.github/workflows/: ci.yml  (+3 more)
app/: anthropic_cost.py  auth.py  authn.py  bucho.py  config.py  cost_cutter.py  database.py  digest_logic.py  embedding.py  growth.py  koe_briefing.py  koe_chunk.py  koe_digest.py  koe_filter.py  koe_logic.py  koe_signal.py  koe_tag.py  main.py  middleware.py  models.py  oauth.py  seed_nippou.py  seed_ranraners.py  session.py  textutil.py  token_cutter.py
db/: schema.sql  v10_anthropic_cost.sql  v11_daily_digest.sql  v12_koe_king.sql  v13_lore.sql  v14_signals.sql  v15_daily_reports.sql  v16_growth_perf_indexes.sql  v17_dedup_knn_index.sql  v6_intelligence.sql  v7_self_growth.sql  v8_token_cutter.sql  v9_scoring.sql
docs/: cowork-sessions-knowhow.md  knowhow_specification.md  requirements.md  spec.md
scripts/: apply_schema.py  build_nippou_backfill.py  import_via_admin.py  migrate_notion_to_knowhow.py  post_nippou.py  setup_repo.sh
tests/: test_anthropic_cost.py  test_auth.py  test_auto_learn_gate.py  test_bucho.py  test_cost_cutter.py  test_digest_logic.py  test_growth.py  test_koe_briefing.py  test_koe_chunk.py  test_koe_digest.py  test_koe_filter.py  test_koe_logic.py  test_koe_signal.py  test_koe_signal_savepoint.py  test_metabolize.py  test_middleware.py  test_nightly_dedup.py  test_nightly_scoring.py  test_nippou.py  test_seed_nippou.py  test_seed_ranraners.py  test_textutil.py  test_token_cutter.py
(+37 files in other folders)
